fixed search functions

--- a/webserver/templates/layout.html
+++ b/webserver/templates/layout.html
@@ -1,8 +1,8 @@
 <!doctype html> 
-<title>AppName</title>
+<title>ClinicalStudyGuide</title>
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
 <div class=page>
-  <h1>AppName</h1>
+  <h1>ClinicalStudyGuide</h1>
   <div class=metanav>
   {% if session.logged_in %}
     <a href="{{ url_for('logout') }}">log out</a>
