--- a/webserver/templates/participant_personal.html
+++ b/webserver/templates/participant_personal.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block body %}
+  <h2>Personal health information</h2>
   Height: {{height}}<br>
   Weight: {{weight}}<br>
   <h2>Habits</h2>
